made logic of adding a question through the react interface

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title> TestMaker | LupusMagnus </title>
+    <title>  📝 TestMakrr | Lupus Magnus </title>
   </head>
   <body>
     <noscript>Opa :\  Essa página é construída com React, então você precisa habilitar o JavaScript...</noscript>
